[gd_scene load_steps=4 format=3 uid="uid://cb60xmkm4ktjg"]

[ext_resource type="Texture2D" uid="uid://cfjyh637uhpvr" path="res://entities/player/assets/animations/ppe/player-idle4.png" id="1_2w0k3"]
[ext_resource type="Script" path="res://entities/clothes/ppe_suit.gd" id="1_8sfso"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ig6k0"]
size = Vector2(36, 49)

[node name="PPESuit" type="Area2D"]
collision_layer = 4
collision_mask = 2
script = ExtResource("1_8sfso")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -2)
scale = Vector2(1.5, 1.526)
texture = ExtResource("1_2w0k3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 3.5)
shape = SubResource("RectangleShape2D_ig6k0")

[node name="MessagePosition" type="Node2D" parent="."]
position = Vector2(0, -24)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
